Code cleanup. Remove extraspaces in generated files. (#1080)
* Code cleanup. Remove extraspaces in generated files.

* Fixed documentation about views properties